# Automake source file for the Parma Polyhedra Library.
# Copyright (C) 2001-2010 Roberto Bagnara <bagnara@cs.unipr.it>
# Copyright (C) 2010-2012 BUGSENG srl (http://bugseng.com)
#
# This file is part of the Parma Polyhedra Library (PPL).
#
# The PPL is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation; either version 3 of the License, or (at your
# option) any later version.
#
# The PPL is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02111-1307, USA.
#
# For the most up-to-date information see the Parma Polyhedra Library
# site: http://bugseng.com/products/ppl/ .

EXT_FILES = \
ccc4.ext \
ccc5.ext \
ccc6.ext \
ccp4.ext \
ccp5.ext \
ccp6.ext \
cp4.ext \
cp5.ext \
cp6.ext \
cp7.ext \
cube.ext \
cut16_11.ext \
cut32_16.ext \
cyclic10-4.ext \
cyclic12-6.ext \
cyclic14-8.ext \
cyclic16-10.ext \
cyclic25_13.ext \
dcube10.ext \
dcube12.ext \
dcube3.ext \
dcube6.ext \
dcube8.ext \
irbox20-4.ext \
irbox200-4.ext \
mp5.ext \
prodst62.ext \
redcheck.ext \
reg24-5.ext \
reg600-5_m.ext \
samplev1.ext \
samplev2.ext \
samplev3.ext \
tsp5.ext

INE_FILES = \
1d.ine \
1da.ine \
allzero.ine \
cp4.ine \
cp5.ine \
cp6.ine \
cross10.ine \
cross12.ine \
cross4.ine \
cross6.ine \
cross8.ine \
cube.ine \
cube10.ine \
cube12.ine \
cube3.ine \
cube6.ine \
cube8.ine \
cubetop.ine \
cubocta.ine \
cyc.ine \
cyclic17_8.ine \
diamond.ine \
dodeca_m.ine \
ex1.ine \
grcubocta.ine \
hexocta.ine \
icododeca_m.ine \
in0.ine \
in1.ine \
in2.ine \
in3.ine \
in4.ine \
in5.ine \
in6.ine \
in7.ine \
infeas.ine \
integralpoints.ine \
kkd18_4.ine \
kkd27_5.ine \
kkd38_6.ine \
kq20_11_m.ine \
metric40_11.ine \
metric80_16.ine \
mit.ine \
mit288-281.ine \
mit31-20.ine \
mit41-16.ine \
mit708-9.ine \
mit71-61.ine \
mit90-86.ine \
mp5.ine \
mp5a.ine \
mp6.ine \
nonfull.ine \
origin.ine \
project1_m.ine \
project1res.ine \
project2_m.ine \
project2res.ine \
rcubocta.ine \
reg24-5.ine \
rhomtria_m.ine \
sample.ine \
sampleh1.ine \
sampleh2.ine \
sampleh3.ine \
sampleh4.ine \
sampleh5.ine \
sampleh6.ine \
sampleh7.ine \
sampleh8.ine \
trunc10.ine \
trunc7.ine \
tsp5.ine

dist_noinst_DATA = $(EXT_FILES) $(INE_FILES)
