# Automake source file for the Parma Polyhedra Library.
# Copyright (C) 2001-2010 Roberto Bagnara <bagnara@cs.unipr.it>
# Copyright (C) 2010-2012 BUGSENG srl (http://bugseng.com)
#
# This file is part of the Parma Polyhedra Library (PPL).
#
# The PPL is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation; either version 3 of the License, or (at your
# option) any later version.
#
# The PPL is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02111-1307, USA.
#
# For the most up-to-date information see the Parma Polyhedra Library
# site: http://bugseng.com/products/ppl/ .

dist_noinst_DATA = \
adlittle.mps \
afiro.mps \
bgprtr.mps \
blend.mps \
boeing1.mps \
boeing2.mps \
egout.mps \
ex12.mps \
ex1.mps \
kb2.mps \
lseu.mps \
markshare1.mps \
markshare2.mps \
mas74.mps \
mas76.mps \
mip.mps \
modglob.mps \
noswot.mps \
opt1217.mps \
p0033.mps \
pk1.mps \
rout.mps \
sample.mps \
sc105.mps \
sc50a.mps \
sc50b.mps \
ship08l.mps \
unboundedmin.mps
